#   metastudent-data - predictor of Gene Ontology terms from protein sequence - data files
#   Copyright (C) 2011 Tobias Hamp <hampt@rostlab.org>
#   .
#   This program is free software; you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation; either version 2 of the License, or
#   (at your option) any later version.
#   .
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#   .
#   You should have received a copy of the GNU General Public License
#   along with this program; if not, write to the Free Software
#   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
#
AC_INIT([metastudent-data-2], [1.0.0], [hampt@rostlab.org])

AC_CONFIG_SRCDIR([dataversion.txt])
AM_INIT_AUTOMAKE([no-dist-gzip dist-xz])
AC_SUBST(XZ_OPT, [-9ev])

AC_CONFIG_FILES([
	Makefile
])
AC_OUTPUT
